[package]
name = "aetherforge"
version = "1.0.4"
description = "AetherForge AI Game Engine Desktop App"
authors = ["AetherForge Team"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "^1.5" }

[dependencies]
tauri = { version = "^1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
